MiniC/TP03/tests/students/type_errors/test_multiplication_wrong_type.c
#include "printlib.h"

int main()
{
    string x;
    string y;
    int z;
    z = (x * y);
    return 0;
}

// EXPECTED
// EXITCODE 2
// In function main: Line 8 col 9: invalid type for multiplicative operands: string and string